# vibecli

./: README.md  cli.py  config.py  main.py  project.py  providers.py  pyproject.toml  requirements.txt  ui.py  vibe_mcp.py  vibe_tools.py  vibecode_app.py
docs/: basic.md  commands.md  config.md  index.md
vibe/: __main__.py  config.py  main.py  mcp_tools.py  model_providers.py  providers.py  vibecode_app.py
