[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe"
version = "0.1.0"
authors = [{name="usiqwerty"}]
description = "Ultimate vibecoding CLI"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]

[project.scripts]
vibe = "vibe.main:run"